# marketing-skills

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SKILL_REFERENCE.md
scripts/: validate_skills.py
skills/analytics-attribution/: SKILLS.md
skills/analytics-attribution/campaign-retrospective-writer/: SKILL.md  main.py
skills/analytics-attribution/marketing-kpi-framework/: SKILL.md
skills/content/: SKILLS.md
skills/content/content-strategy-planner/: SKILL.md
skills/content/editorial-calendar-generator/: SKILL.md
skills/content/multi-channel-rewriter/: SKILL.md
skills/crm-private-domain/: SKILLS.md
skills/crm-private-domain/lifecycle-segmentation/: SKILL.md
skills/crm-private-domain/winback-automation-planner/: SKILL.md
skills/growth-cro/: SKILLS.md  ab_test_sample_size.py
skills/growth-cro/ab-test-sample-size/: SKILL.md  main.py
skills/growth-cro/experiment-designer/: SKILL.md
skills/growth-cro/funnel-diagnostics/: SKILL.md
skills/market-research/: SKILLS.md
skills/market-research/competitor-gap-analysis/: SKILL.md
skills/market-research/market-landscape-scan/: SKILL.md
skills/market-research/user-voice-mining/: SKILL.md
skills/paid-media/: SKILLS.md
skills/paid-media/ad-angle-generator/: SKILL.md
skills/paid-media/ad-copy-variant-generator/: SKILL.md
skills/paid-media/channel-budget-allocator/: SKILL.md  main.py
skills/seo-geo-aeo/: SKILLS.md
skills/seo-geo-aeo/answer-engine-optimizer/: SKILL.md
skills/stp-brand/: SKILLS.md
tests/: test_python_skills.py
(+10 files in other folders)
