[project]
name = "marketing-skills"
version = "0.1.0"
description = "Marketing skills library (Markdown + Python CLIs) for local AI agents"
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
